# Open-Character-Studio-UI

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  reproduce_issue.py  studio_app.py
character/: __init__.py  checkpoint_registry.py  cli.py  constants.py  constitution_generator.py
character/constitution/: __init__.py  __main__.py  loader.py  migrate.py  schema.py
character/distillation/: __init__.py  dataset.py  pipeline.py  prompts.py
character/eval/: __init__.py  elo.py  persona_classifier.py  quick_eval.py  revealed_preferences.py
character/introspection/: __init__.py  dataset.py  pipeline.py  prompts.py  quality.py
constitutions/hand-written/: customer_service.txt  flourishing.txt  humorous.txt  impulsive.txt  loving.txt  mathematical.txt  misaligned.txt  nonchalant.txt  pirate.txt  poetic.txt  remorseful.txt  sarcastic.txt  sycophantic.txt
constitutions/structured/: flourishing.yaml  humorous.yaml  impulsive.yaml  loving.yaml  mathematical.yaml  misaligned.yaml  nonchalant.yaml  pirate.yaml  poetic.yaml  remorseful.yaml  sarcastic.yaml  sycophantic.yaml
creaturelab/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
creaturelab/electron/: main.ts  preload.ts
deploy/: __init__.py  demo_chatbot.py  modal_app.py
docs/: CHARACTER_TRAINING_WRITEUP.md  CONSTITUTION_PARTS_SPECIFICATION.md  constitution-guide.md
model-behavior-spec/: README.md  battery.py  probe_thinking.py  run_baseline.py
scripts/: clean_introspection_data.py  run_ablation.sh  run_llama_study.sh  run_paper_scale_llama.sh  test_all_personas.sh  test_e2e.py  test_pipeline.sh  training_dashboard.py
studio/: gallery.py  logic.py  main.py  styles.py  teaching.py  ui.py  utils.py  wizard.py
teaching/: open_character_training_tutorial.txt
technical-reports/: 001-remorseful-character-training.md  002-experiments-infrastructure.md  003-classic-model-migration.md  004-qwen-instruct-2507-selection.md  005-constitution-loading-improvements.md  006-adapter-merging-methodology.md  007-model-scaling-235b-teacher.md  008-moe-expert-routing-character-inconsistency.md
tests/: test_checkpoint_registry.py  test_constitution_integration.py  test_distillation_dataset.py  test_distillation_prompts.py  test_eval_tools.py  test_openai_sampling.py
tools/: __init__.py  check_tinker.py  export_checkpoints_csv.py  merge_loras.py  sample_tinker.py  test_all_checkpoints.py  test_moe_experts.py  verify_tinker_api.py
(+25 files in other folders)
